# fp8-mps-metal

./: ANALYSIS_REPORT.md  BEFORE_AFTER_DIAGRAM.txt  COMFYUI_INSTALL.md  COMPLETION_CHECKLIST.md  FIX_DOCUMENTATION.md  FIX_SUMMARY.md  FP8_FIX_EXPLANATION.md  IMPLEMENTATION_SUMMARY.md  QUICKFIX.md  README.md  TEST_VALIDATION_SUMMARY.md  USER_SUMMARY.md  __init__.py  example_fp8_conversion.py  fp8_backend.py  fp8_matmul.metal  fp8_mps_native.py  fp8_mps_patch.py  mps_validation_script.py  pyproject.toml  test_cross_validation.py  test_decode_signature.py  test_fp8_conversion_cpu.py  test_fp8_correctness.py  test_fp8_metal.py  test_mps_limits_patch.py  test_mps_vs_cpu.py  test_vae_tiling.py  test_validation.py  validate_fix.py
.github/workflows/: test-mps.yml
